--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bignumber.js": "^4.0.2",
     "moment": "^2.18.1",
     "request": "^2.81.0",
     "xlsx": "^0.11.3",
