--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "main.js",
   "devDependencies": {
-    "electron": "1.7.9",
+    "electron": "^1.8.2",
     "electron-packager": "^8.7.0"
   },
   "scripts": {
